# GestaoJadlog

./: .gitignore  GestãoEntregas.html  SYSTEM_DOC.md  main.py  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dados/financeiro/: RelatorioEntrega_export_1778020385850.xlsx  RelatorioEntrega_export_1778021690410.xlsx
tests/: conftest.py  helpers.py  test_audit_endpoint.py  test_backup_restore.py  test_diag_audit.py  test_entra_no_sla.py  test_health.py  test_logging.py  test_merge_incremental.py  test_pe_compute.py  test_rate_limit.py  test_read_and_merge.py  test_regressions.py  test_snapshots.py
tools/: backup_data.py  restore_data.py
